Fixed header spacing issue, centered hero unit.

--- a/css/custom.css
+++ b/css/custom.css
@@ -7,7 +7,8 @@
 .span12 .hero h1 {
 	text-align: center;
 	font-size: 1.5em;
-	font-weight: 400;
-	color: #252e35;
+	font-weight: 100;
+	color: #f7f7f7;
 	padding-top: 165px;
+	letter-spacing: 1px;
 }
