--- a/css/style.css
+++ b/css/style.css
@@ -132,7 +132,6 @@ header{
 
 header h1{
   margin: 7px 0 0 0;
-  padding-left: 30px;
 }
 
 .container{
@@ -151,7 +150,6 @@ header h1{
 
 nav{
   margin: 7px 0 7px 0;
-  padding-right: 30px
 }
 
 nav ul{
@@ -205,6 +203,10 @@ nav a:hover{
     width: 100%;
     padding: 0 5% 0 5%;
     max-width: 960px;
+  }
+
+  header h1 {
+    text-align: center;
   }
 }
 
